--- a/js_contest_rev.html
+++ b/js_contest_rev.html
@@ -8,7 +8,8 @@
 <script src="js/jquery-3.5.1.min.js"></script>
 </head>
 <body>
-  <table id="table"></table>
+    <p class="title">芸能人神経衰弱</p>
+    <table id="table"></table>
 </body>
 
 <script>
@@ -25,7 +26,7 @@ window.onload=function(){
   
   //カード配列作成
   const cards=[];
-  const types=['m','mm','w','ww'];
+  const types=['m','w',];
   for(let i=0;i<types.length;i++){
     for(let j=1;j<=10;j++){
       let card=new Card(types[i],j);
