ボタン追加

--- a/js_contest_rev.html
+++ b/js_contest_rev.html
@@ -8,12 +8,18 @@
 <script src="js/jquery-3.5.1.min.js"></script>
 </head>
 <body>
-    <p class="title">芸能人神経衰弱</p>
+    <div class="bg">
+        <div class="main">
+            <p class="title">芸能人神経衰弱</p>
+            <button class = "start">ゲームスタート</button>
+        </div>      
+    </div>
+
     <table id="table"></table>
 </body>
 
 <script>
-    
+
 window.onload=function(){
   
   function Card(type,num){
