スタートボタン実装（？）

--- a/js_contest_rev.html
+++ b/js_contest_rev.html
@@ -4,21 +4,42 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="css/main.css">
 <!-- <script src="js/main.js"></script> -->
-<title>芸能人神経衰弱rev</title>
+<title>芸能人❤神経衰弱rev</title>
 <script src="js/jquery-3.5.1.min.js"></script>
+<style>
+  .bg {
+    display: block;
+  }
+
+  #table {
+    display: none;
+  }
+</style>
 </head>
-<body>
+<body class="back">
     <div class="bg">
         <div class="main">
-            <p class="title">芸能人神経衰弱</p>
-            <button class = "start">ゲームスタート</button>
+            <p class="title">芸能人❤神経衰弱</p>
+            <button id = "start">ゲームスタート</button>
         </div>      
     </div>
-    <div id="clock">経過時間</div>
     <table id="table"></table>
 </body>
 
 <script>
+
+document.addEventListener('DOMContentLoaded', function() {
+  let startButton = document.getElementById('start');
+  let startScreen = document.querySelector('.bg');
+  let gameScreen = document.querySelector('#table');
+
+  startButton.addEventListener('click', function() {
+    startScreen.style.display = 'none';
+    gameScreen.style.display = 'block';
+  });
+});
+
+
 
 window.onload=function(){
  
@@ -98,15 +119,18 @@ window.onload=function(){
 
 
 }
-// let counter = 0;
-//  let clock = document.getElementById("clock");
-//  let timer = setInterval(function(){
-//     clock.innerText = "経過時間:"+(++count);
-//  }, 1000);
-//  function clock (){
-    
-//  }
 
+//背景画像スクロール
+document.querySelector(`.back`).animate(
+	[
+		{ backgroundPosition: '0 0' },
+		{ backgroundPosition: '0 100%' }
+	],
+	{
+		duration: 8000,
+		iterations: Infinity
+	}
+);
 
 </script>
 </html>
