--- a/js_contest_rev.html
+++ b/js_contest_rev.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="css/main.css">
-<!-- <script src="js/main.js"></script> -->
 <title>芸能人❤神経衰弱rev</title>
 <script src="js/jquery-3.5.1.min.js"></script>
 <style>
@@ -11,7 +10,7 @@
     display: block;
   }
 
-  #table {
+  .game {
     display: none;
   }
 </style>
@@ -23,15 +22,31 @@
             <button id = "start">ゲームスタート</button>
         </div>      
     </div>
-    <table id="table"></table>
+    <div class="game">
+      <table id="table"></table>
+      <button id="reset">リセット</button>
+      <button id="home">戻る</button>
+    </div>
 </body>
 
 <script>
+//背景画像スクロール
+document.querySelector(`.back`).animate(
+	[
+		{ backgroundPosition: '0 0' },
+		{ backgroundPosition: '0 100%' }
+	],
+	{
+		duration: 8000,
+		iterations: Infinity
+	}
+);
 
+//ゲーム画面に切り替え
 document.addEventListener('DOMContentLoaded', function() {
   let startButton = document.getElementById('start');
   let startScreen = document.querySelector('.bg');
-  let gameScreen = document.querySelector('#table');
+  let gameScreen = document.querySelector('.game');
 
   startButton.addEventListener('click', function() {
     startScreen.style.display = 'none';
@@ -116,21 +131,10 @@ window.onload=function(){
       }
   }
  }
-
-
 }
 
-//背景画像スクロール
-document.querySelector(`.back`).animate(
-	[
-		{ backgroundPosition: '0 0' },
-		{ backgroundPosition: '0 100%' }
-	],
-	{
-		duration: 8000,
-		iterations: Infinity
-	}
-);
+//リセットボタン
+
 
 </script>
 </html>
