見た目改良

--- a/js_contest_rev.html
+++ b/js_contest_rev.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="css/main.css">
-<title>芸能人❤神経衰弱rev</title>
+<title>芸能人❤神経衰弱</title>
 <script src="js/jquery-3.5.1.min.js"></script>
 <style>
   .bg {display: block;}
